<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/guess_word" />

    <TextView
        android:id="@+id/word_to_guess"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
        
        android:text="" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dont_know_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_know" />

        <Button
            android:id="@+id/know_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/know" />

    </LinearLayout>

</LinearLayout>