<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/correct_answers"
		    android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/incorrect_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
	    android:textColor="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/results_table"
		    android:textColor="#FFFFFF"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:stretchColumns="1">
		
		    <View
		        android:layout_height="2dip"
		        android:background="#FF909090" />
		
		</TableLayout>

    </ScrollView>

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart" />

</LinearLayout>